--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,11 @@ vendor/
 .env
 BeerOCraft.iml
 public/.htaccess
-var/
+var/*
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
