--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@babel/preset-react": "^7.14.5",
         "axios": "^0.21.4",
         "prop-styles": "^2.0.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0"
     }
 }
