--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "api-platform/core": "^2.6",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.0",
@@ -26,6 +27,7 @@
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
         "symfony/mailer": "5.3.*",
+        "symfony/mailgun-mailer": "5.3.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/property-access": "5.3.*",
         "symfony/property-info": "5.3.*",
@@ -37,6 +39,7 @@
         "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
+        "symfonycasts/verify-email-bundle": "^1.5",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
