--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -3,8 +3,12 @@ nelmio_cors:
         origin_regex: true
         allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
+        allow_headers: ['Content-Type', 'Authorization', 'Access-Control-Allow-Origin']
         expose_headers: ['Link']
         max_age: 3600
     paths:
-        '^/': null
+        '^/dashboard/':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['PATCH', POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
