Added some jwt auth (working but need to do some stuff to configure it properly) and modified the MashDataPersister to be an EventSubscriber instead because it's a best practice

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ vendor/
 .env
 BeerOCraft.iml
 public/.htaccess
+
+config/jwt/private.pem
+/config/jwt/public.pem
+
 var/*
 var/cache/*
 var/cache/dev/*
@@ -20,3 +24,4 @@ var/cache/dev/Symfony/Config/Doctrine/Twig/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
