--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
-        "symfony/framework-bundle": "5.3.*",
+        "symfony/framework-bundle": "5.4.*",
         "symfony/mailer": "5.3.*",
         "symfony/mailgun-mailer": "5.3.*",
         "symfony/monolog-bundle": "^3.7",
@@ -61,7 +61,7 @@
         "sort-packages": true,
         "allow-plugins": {
             "composer/package-versions-deprecated": false,
-            "symfony/flex": false,
+            "symfony/flex": true,
             "symfony/runtime": false
         }
     },
@@ -98,7 +98,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "5.3.*"
+            "require": "5.4.*"
         }
     }
 }
