--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,8 +29,9 @@ security:
         api:
             pattern: ^/dashboard
             stateless: true
-            # anonymous: true
-            jwt: ~
+#            anonymous: true
+#                thentication.jwt_authenticator
+#            jwt: ~
 
 #        main:
 #            anonymous: true
@@ -61,7 +62,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/dashboard/login, roles: PUBLIC_ACCES }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/dashboard/docs,  roles: PUBLIC_ACCESS }
         - { path: ^/dashboard,       roles: IS_AUTHENTICATED_FULLY }
 
