--- a/config/routes/api_platform.yaml
+++ b/config/routes/api_platform.yaml
@@ -2,3 +2,5 @@ api_platform:
     resource: .
     type: api_platform
     prefix: /dashboard
+api_authentication:
+    path: /dashboard/login_check
