--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-vendor/
 .idea/
 .env
 BeerOCraft.iml
@@ -7,9 +6,10 @@ public/.htaccess
 config/jwt/private.pem
 config/jwt/public.pem
 
-var/cache/dev/
-
-
+/var/cache/dev/*
+/var/cache/dev
+/var/cache
+/var/cache/*
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
