--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@
 #    controller: App\Controller\DefaultController::index
 api_login_check:
   path: /dashboard/login_check
+
+api_refresh_token:
+    path: /dashboard/token/refresh
+    controller: gesdinet.jwtrefreshtoken::refresh
