--- a/config/routes/api_platform.yaml
+++ b/config/routes/api_platform.yaml
@@ -2,5 +2,10 @@ api_platform:
     resource: .
     type: api_platform
     prefix: /dashboard
+#    swagger:
+#        api_keys:
+#            JWT:
+#                name: Authorization
+#                type: header
 api_authentication:
     path: /dashboard/login_check
