--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -79,9 +79,11 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/dashboard/token/refresh, roles: PUBLIC_ACCESS}
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/dashboard/beer_recipes, roles: PUBLIC_ACCESS }
+#        - { path: ^/dashboard/token/refresh, roles: PUBLIC_ACCESS}
+#        - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/dashboard/(login|token/refresh), roles: PUBLIC_ACCESS }
-        - { path: ^/dashboard/docs,  roles: PUBLIC_ACCESS }
-        - { path: ^/dashboard,       roles: IS_AUTHENTICATED_FULLY }
+#        - { path: ^/dashboard/users, roles: PUBLIC_ACCESS }
+        - { path: ^/dashboard/docs, roles: PUBLIC_ACCESS }
+        - { path: ^/dashboard, roles: IS_AUTHENTICATED_FULLY }
 
