--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,10 +1,11 @@
 nelmio_cors:
     defaults:
-        origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization', 'Access-Control-Allow-Origin']
-        expose_headers: ['Link']
+        allow_credentials: false
+        origin_regex: false
+        allow_origin: []
+        allow_methods: []
+        allow_headers: []
+        expose_headers: []
         max_age: 3600
     paths:
         '^/dashboard/':
@@ -12,3 +13,9 @@ nelmio_cors:
             allow_headers: ['*']
             allow_methods: ['PATCH', POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
+        '^/':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['PATCH', POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+            hosts: ['^localhost$']
