--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,18 +52,18 @@ security:
 #            jwt: ~
 
 #        main:
-#            anonymous: true
+##            anonymous: true
 #            lazy: true
+#            custom_authenticator: App\Security\MyCustomAuthenticator
 #            provider: app_user_provider
-
-            # previous authentication
-            # lazy: true
-            # provider: app_user_provider
-            # custom_authenticator: App\Security\MyCustomAuthenticator
-            # logout:
-            #     path: app_logout
+#            custom_authenticators: ~
+#             logout:
+#                 path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
+            # previous authentication
+            # lazy: true
+#             provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -79,10 +79,10 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/dashboard/beer_recipes, roles: PUBLIC_ACCESS }
+#        - { path: ^/dashboard/beer_recipes, roles: PUBLIC_ACCESS }
 #        - { path: ^/dashboard/token/refresh, roles: PUBLIC_ACCESS}
 #        - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/dashboard/(login|token/refresh), roles: PUBLIC_ACCESS }
+        - { path: ^/dashboard/(login|token/refresh|register), roles: PUBLIC_ACCESS }
 #        - { path: ^/dashboard/users, roles: PUBLIC_ACCESS }
         - { path: ^/dashboard/docs, roles: PUBLIC_ACCESS }
         - { path: ^/dashboard, roles: IS_AUTHENTICATED_FULLY }
