--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^5.3.0"
+        "react-router-dom": "^5.3.0",
+      "@react-buddy/ide-toolbox": "^2.2.1"
     }
 }
