--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .idea/
+.vscode/
 .env
 BeerOCraft.iml
 public/.htaccess
 rector.php
+/src/DataFixtures/AppFixtures.php
+
 
 /var/cache/dev/*
 /var/cache/dev
@@ -28,4 +31,12 @@ yarn-error.log
 /public/bundles/
 /var/
 /vendor/
+/config/secrets/dev/dev.decrypt.private.php
 ###< symfony/framework-bundle ###
+node_modules
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
+public/bundles/apiplatform/
+/public/bundles/apiplatform/
