--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "lexik/jwt-authentication-bundle": "^2.14",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
-        "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
@@ -49,6 +48,8 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fzaninotto/faker": "*",
         "rector/rector": "^0.14.0",
         "symfony/debug-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.33",
